--- a/package.json
+++ b/package.json
@@ -1,21 +1,39 @@
 {
-  "name": "mcp-estcequelonmetenprod",
-  "version": "1.0.0",
-  "description": "MCP - Est-ce qu'on met en production aujourd'hui?",
+  "name": "mcp-estcequelonmetenprodaujourdhui",
+  "version": "1.0.0", 
+  "description": "MCP Server - Est-ce qu'on met en production aujourd'hui?",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "jest --runInBand"
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/mcp-server.js",
+  "start-http": "node dist/http-server.js",
+  "start-stdio": "node dist/mcp-stdio-server.js",
+    "dev": "ts-node src/mcp-server.ts",
+  "stdio-client": "node scripts/stdio-client.js",
+    "pretest": "npm run build",
+    "test": "jest",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0"
   },
   "author": "Ludovic Toinel",
   "license": "MIT",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^0.5.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "jest": "^29.6.1",
-    "supertest": "^6.3.3",
-    "nodemon": "^2.0.22"
+    "typescript": "^5.1.6",
+    "ts-node": "^10.9.1",
+    "ts-jest": "^29.1.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.2",
+    "eslint": "^8.46.0",
+    "@typescript-eslint/parser": "^6.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@types/express": "^4.17.21",
+    "execa": "^6.1.0"
+  },
+  "bin": {
+    "estcequonmetenprod": "dist/bin/estcequonmetenprod.js"
   }
 }
