--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "mcp-estcequelonmetenprodaujourdhui",
   "version": "1.0.0", 
-  "description": "MCP Server - Est-ce qu'on met en production aujourd'hui?",
+  "description": "MCP Server - Est-ce que l'on met en production aujourd'hui ?",
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node dist/mcp-server.js",
-  "start-http": "node dist/http-server.js",
-  "start-stdio": "node dist/mcp-stdio-server.js",
-    "dev": "ts-node src/mcp-server.ts",
-  "stdio-client": "node scripts/stdio-client.js",
+    "start-http": "node dist/mcp-http-server.js",
+    "start-stdio": "node dist/mcp-stdio-server.js",
     "pretest": "npm run build",
     "test": "jest",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0"
@@ -31,9 +29,8 @@
     "@typescript-eslint/parser": "^6.9.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@types/express": "^4.17.21",
-    "execa": "^6.1.0"
-  },
-  "bin": {
-    "estcequonmetenprod": "dist/bin/estcequonmetenprod.js"
+    "execa": "^6.1.0",
+    "supertest": "^6.3.3",
+    "@types/supertest": "^2.0.12"
   }
 }
