Change HTTP server to use Express framework and official MCP framework

--- a/mcp-config.json
+++ b/mcp-config.json
@@ -2,7 +2,7 @@
   "mcpServers": {
     "estcequonmetenprodaujourdhui": {
       "command": "node",
-      "args": ["dist/mcp-server.js"],
+    "args": ["dist/mcp-stdio-server.js"],
       "env": {}
     }
   }
