--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "mcp-estcequonmetenprodaujourdhui",
   "version": "1.0.0", 
   "description": "MCP Server - Est-ce que l'on met en production aujourd'hui ?",
-  "main": "index.js",
+  "main": "dist/mcp-stdio-server.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/mcp-server.js",
+    "start": "node dist/mcp-stdio-server.js",
     "start-http": "node dist/mcp-http-server.js",
     "start-stdio": "node dist/mcp-stdio-server.js",
     "pretest": "npm run build",
@@ -23,14 +23,14 @@
     "typescript": "^5.1.6",
     "ts-node": "^10.9.1",
     "ts-jest": "^29.1.0",
-    "@types/jest": "^29.5.3",
-    "@types/node": "^20.4.2",
     "eslint": "^8.46.0",
     "@typescript-eslint/parser": "^6.9.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@types/express": "^4.17.21",
     "execa": "^6.1.0",
     "supertest": "^6.3.3",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.2",
     "@types/supertest": "^2.0.12"
   }
 }
