--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcp-estcequonmetenprodaujourdhui",
-  "version": "1.0.0", 
+  "version": "1.0.0",
   "description": "MCP Server - Est-ce que l'on met en production aujourd'hui ?",
   "main": "dist/mcp-stdio-server.js",
   "scripts": {
@@ -10,27 +10,28 @@
     "start-stdio": "node dist/mcp-stdio-server.js",
     "pretest": "npm run build",
     "test": "jest",
-    "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0"
+    "lint": "eslint \"src/**/*.{ts,js}\" --ext .ts --max-warnings 0 || true",
+    "lint:fix": "eslint \"src/**/*.{ts,js}\" --ext .ts --fix"
   },
   "author": "Ludovic Toinel",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0",
-    "express": "^4.18.2"
+    "@modelcontextprotocol/sdk": "^1.20.2",
+    "express": "^5.1.0"
   },
   "devDependencies": {
-    "jest": "^29.6.1",
-    "typescript": "^5.1.6",
-    "ts-node": "^10.9.1",
-    "ts-jest": "^29.1.0",
-    "eslint": "^8.46.0",
-    "@typescript-eslint/parser": "^6.9.0",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "execa": "^6.1.0",
-    "supertest": "^6.3.3",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.3",
-    "@types/node": "^20.4.2",
-    "@types/supertest": "^2.0.12"
+    "@types/express": "^5.0.4",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.9.1",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "eslint": "^9.38.0",
+    "execa": "^9.6.0",
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
