--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,17 +1,24 @@
-name: Release
+# Workflow: Tag and Release
+# This workflow asks for a version, creates a git tag, and pushes it to the repository.
+
+name: Tag and Release
 
 on:
-  push:
-    tags:
-      - 'v*'
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Release version (e.g. v1.2.3)'
+        required: true
+        type: string
 
 jobs:
-  release:
+  tag-and-release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -31,6 +38,14 @@ jobs:
       - name: Test
         run: npm test
 
+      - name: Set NPM version from tag
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          VERSION="${GITHUB_REF#refs/tags/}"
+          npm version --no-git-tag-version "$VERSION"
+          git add package.json package-lock.json || true
+          git commit -m "chore(release): v$VERSION" || true
+
       - name: Publish to npm
         if: startsWith(github.ref, 'refs/tags/')
         env:
@@ -38,15 +53,15 @@ jobs:
         run: |
           echo "Publishing to npm..."
           npm publish --access public
-      
+
       - name: Create GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
+          tag_name: ${{ github.event.inputs.version }}
+          release_name: Release ${{ github.event.inputs.version }}
           body: |
-            Automated release for ${{ github.ref_name }}.
+            Automated release for ${{ github.event.inputs.version }}.
             Published to npm.
           draft: false
           prerelease: false
