fix NPM installation

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "author": "Ludovic Toinel",
   "license": "MIT",
+  "bin": {
+    "mcp-estcequonmetenprodaujourdhui": "dist/mcp-stdio-server.js"
+  },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.2",
     "express": "^5.1.0"
