--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "Ludovic Toinel",
   "license": "MIT",
   "bin": {
-    "mcp-estcequonmetenprodaujourdhui": "dist/mcp-stdio-server.js"
+    "mcp-estcequonmetenprodaujourdhui": "dist/mcp-stdio-server.js",
+    "mcp-estcequonmetenprodaujourdhui-http": "dist/mcp-http-server.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.2",
